restored jdk9+ profile