@@ -330,8 +330,8 @@
     </build>
 
     <profiles>
-        <!--
         <profile>
+            <id>JDK9+</id>
             <activation>
                 <jdk>[9,)</jdk>
             </activation>
@@ -341,11 +341,11 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration>
-                            <argLine>-add-modules=java.xml.bind,java.xml.ws</argLine>
+                            <argLine>--add-modules=java.xml.bind,java.xml.ws</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
-        </profile>-->
+        </profile>
     </profiles>
 </project>
